@@ -1,3 +1,11 @@
+2012-09-26  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c src/util.c (streq) src/util.h:  New utility function
+	streq(char *a, char *b) returns TRUE if a and b are identical save for
+	leading and trailing whitespace.  Use this for matching requested string
+	labels in a using spec to the actual column header text in a data file.
+	Bug #3571243
+
 2012-09-25  Dima Kogan  <gnuplot@dima.secretsauce.net>
 
 	* src/gplt_x11.c src/mouse.c (do_event) term/x11.trm:
